<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusableInTouchMode="true"
        android:background="@android:color/white">

    <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="Start"
            style="@style/TextStyle.Comment"
            android:textAllCaps="false"
            android:background="@drawable/radius"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/reset"
            style="@style/TextStyle.Comment"
            android:textAllCaps="false"
            android:background="@drawable/radius"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/start"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/date_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_45"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/reset">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/radius_start"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_calender"
                android:id="@+id/date_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
                android:id="@+id/date"
                style="@style/TextStyle.Comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintStart_toEndOf="@+id/date_image"
                android:hint="@string/date"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:gravity="center"
                android:maxLines="1"
                android:longClickable="false"
                android:focusableInTouchMode="false"
                app:layout_constraintTop_toTopOf="@+id/date_image"
                app:layout_constraintBottom_toBottomOf="@+id/date_image"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/count_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_45"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/date_container">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/radius_start"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_count"
                android:id="@+id/count_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
                android:id="@+id/count"
                style="@style/TextStyle.Comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintStart_toEndOf="@+id/count_image"
                android:hint="@string/count"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="number"
                android:imeOptions="actionDone"
                app:layout_constraintTop_toTopOf="@+id/count_image"
                app:layout_constraintBottom_toBottomOf="@+id/count_image"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/flow_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radius_45"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/count_container">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@drawable/radius_start"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:src="@drawable/ic_flow"
                android:id="@+id/flow_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <EditText
                android:id="@+id/flow"
                style="@style/TextStyle.Comment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                app:layout_constraintStart_toEndOf="@+id/flow_image"
                android:hint="@string/flow_rate"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:gravity="center"
                android:maxLines="1"
                android:inputType="number"
                android:imeOptions="actionDone"
                app:layout_constraintTop_toTopOf="@+id/flow_image"
                app:layout_constraintBottom_toBottomOf="@+id/flow_image"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintVertical_bias="1.0"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.maher.irrigator.widget.spinner.SpinnerTextView
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="@dimen/item_height"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/spinner_item_collapse_bg"
            android:clickable="true"
            android:enabled="true"
            android:gravity="center"
            style="@style/TextStyle.Title"
            android:hint="@string/select_a_plant"
            android:textColor="@color/colorPrimaryText"
            android:textColorHint="@color/colorPrimaryText"
            app:collapse_item_display_background="@drawable/spinner_item_collapse_bg"
            app:dropdown_item_height="@dimen/item_height"
            app:dropdown_max_height="100dp"
            app:drop_down_list_background="@drawable/drop_down_bg"
            app:expand_item_display_background="@drawable/spinner_item_expand_bg"
            app:hint_text_enable="true"
            app:layout_constraintTop_toBottomOf="@+id/flow_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:focusable="true"/>

    <Button
            android:id="@+id/proceed"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/proceed"
            style="@style/TextStyle.Comment"
            android:textAllCaps="false"
            android:background="@drawable/radius"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>